@@ -57,6 +57,7 @@ class testWFAdaptations(PloneMeetingTestCase):
                                'everyone_reads_all',
                                'hide_decisions_when_under_writing',
                                'items_come_validated',
+                               'waiting_advices',
                                'no_global_observation',
                                'no_proposal',
                                'no_publication',
@@ -1363,6 +1364,195 @@ class testWFAdaptations(PloneMeetingTestCase):
         self.assertFalse(self.hasPermission(ModifyPortalContent, item))
         self.assertEquals(item.getMotivation(), HIDE_DECISION_UNDER_WRITING_MSG)
         self.assertEquals(item.getDecision(), HIDE_DECISION_UNDER_WRITING_MSG)
+
+    def test_pm_WFA_waiting_advices(self):
+        '''Test the workflowAdaptation 'waiting_advices'.'''
+        cfg = self.meetingConfig
+        # ease override by subproducts
+        if not 'waiting_advices' in cfg.listWorkflowAdaptations():
+            return
+
+        self.changeUser('pmManager')
+        # check while the wfAdaptation is not activated
+        self._waiting_advices_inactive()
+
+        # activate the wfAdaptation and check
+        cfg.setWorkflowAdaptations('waiting_advices')
+        performWorkflowAdaptations(cfg, logger=pm_logger)
+        self._waiting_advices_active()
+
+        # if pre_validation is active, it works too
+        cfg.setWorkflowAdaptations(('pre_validation', 'waiting_advices'))
+        # use cfg.at_post_edit_script so WFs are correct
+        cfg.at_post_edit_script()
+        self._waiting_advices_with_prevalidation_active()
+
+    def _waiting_advices_inactive(self):
+        '''Tests while 'waiting_advices' wfAdaptation is inactive.'''
+        # make sure the 'waiting_advices' state does not exist in the item WF
+        itemWF = self.wfTool.getWorkflowsFor(self.meetingConfig.getItemTypeName())[0]
+        self.failIf('waiting_advices' in itemWF.states)
+
+    def _waiting_advices_active(self):
+        '''Tests while 'waiting_advices' wfAdaptation is active.'''
+        cfg = self.meetingConfig
+        # by default it is linked to the 'proposed' state
+        itemWF = self.wfTool.getWorkflowsFor(cfg.getItemTypeName())[0]
+        self.assertTrue('proposed_waiting_advices' in itemWF.states)
+        self.assertTrue('wait_advices_from_proposed' in itemWF.transitions)
+        self.assertTrue('backTo_proposed_from_waiting_advices' in itemWF.transitions)
+
+        # right, create an item and set it to 'proposed_waiting_advices'
+        self.changeUser('pmCreator1')
+        item = self.create('MeetingItem')
+        self.proposeItem(item)
+        # 'pmCreator1' is not able to set item to 'waiting_advices'
+        self.assertFalse(self.transitions(item))
+        # 'pmReviewer1' may do it but by default is not able to edit it
+        self.changeUser('pmReviewer1')
+        self.do(item, 'wait_advices_from_proposed')
+        self.assertEquals(item.queryState(), 'proposed_waiting_advices')
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+
+        # pmCreator1 may view but not edit
+        self.changeUser('pmCreator1')
+        self.assertTrue(self.hasPermission(View, item))
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+        self.assertFalse(self.transitions(item))
+
+        # right come back to 'proposed'
+        self.changeUser('pmReviewer1')
+        self.do(item, 'backTo_proposed_from_waiting_advices')
+        self.assertEquals(item.queryState(), self.WF_STATE_NAME_MAPPINGS['proposed'])
+
+    def _waiting_advices_with_prevalidation_active(self):
+        '''It can also work from several states, if pre_validation is enabled
+           it is possible to go from 'proposed' and 'prevalidated' to 'waiting_advices'
+           and to go back to both states.'''
+        cfg = self.meetingConfig
+        # by default it is linked to the 'proposed' state
+        itemWF = self.wfTool.getWorkflowsFor(cfg.getItemTypeName())[0]
+        self.assertTrue('proposed__or__prevalidated_waiting_advices' in itemWF.states)
+        self.assertFalse('proposed_waiting_advices' in itemWF.states)
+        self.assertFalse('prevalidated_waiting_advices' in itemWF.states)
+        self.assertTrue('wait_advices_from_proposed' in itemWF.transitions)
+        self.assertTrue('wait_advices_from_prevalidated' in itemWF.transitions)
+        self.assertTrue('backTo_proposed_from_waiting_advices' in itemWF.transitions)
+        self.assertTrue('backTo_prevalidated_from_waiting_advices' in itemWF.transitions)
+
+        # right, create an item and set it to 'proposed__or__prevalidated_waiting_advices'
+        self.changeUser('pmCreator1')
+        item = self.create('MeetingItem')
+        self.do(item, 'propose')
+        # 'pmCreator1' is not able to set item to 'waiting_advices'
+        self.assertFalse(self.transitions(item))
+        # 'pmReviewerLevel1' may do it, it is a prereviewer
+        self.changeUser('pmReviewerLevel1')
+        self.assertTrue('wait_advices_from_proposed' in self.transitions(item))
+        # trigger from 'prevalidated'
+        self.do(item, 'prevalidate')
+        self.assertEquals(item.queryState(), 'prevalidated')
+        self.assertFalse(self.transitions(item))
+        self.changeUser('pmReviewerLevel2')
+        self.do(item, 'wait_advices_from_prevalidated')
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+
+        # pmCreator1 may view but not edit
+        self.changeUser('pmCreator1')
+        self.assertTrue(self.hasPermission(View, item))
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+        self.assertFalse(self.transitions(item))
+
+        # right come back to 'prevalidated'
+        self.changeUser('pmReviewerLevel2')
+        self.do(item, 'backTo_prevalidated_from_waiting_advices')
+        self.assertEquals(item.queryState(), 'prevalidated')
+
+    def test_pm_WFA_waiting_advices_several_states(self):
+        '''Test the workflowAdaptation 'waiting_advices'.
+           By default WAITING_ADVICES_FROM_STATES is going from proposed/prevaliated
+           to one single state then back.  But we can go to several states, here got to 2 different
+           states from 'itemcreated' and 'proposed.'''
+        cfg = self.meetingConfig
+        # ease override by subproducts
+        if not 'waiting_advices' in cfg.listWorkflowAdaptations():
+            return
+
+        from Products.PloneMeeting.model import adaptations
+        original_WAITING_ADVICES_FROM_STATES = adaptations.WAITING_ADVICES_FROM_STATES
+        adaptations.WAITING_ADVICES_FROM_STATES = (
+            {'from_states': ('itemcreated', ),
+             'back_states': ('itemcreated', ),
+             'perm_cloned_states': ('itemcreated', ),
+             'remove_modify_access': True},
+            {'from_states': ('proposed', ),
+             'back_states': ('proposed', ),
+             'perm_cloned_states': ('proposed', ),
+             'remove_modify_access': True},)
+        cfg.setWorkflowAdaptations('waiting_advices')
+        performWorkflowAdaptations(cfg, logger=pm_logger)
+
+        self.changeUser('pmCreator1')
+        item = self.create('MeetingItem')
+        # from 'itemcreated'
+        self.do(item, 'wait_advices_from_itemcreated')
+        self.assertEquals(item.queryState(), 'itemcreated_waiting_advices')
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+        self.do(item, 'backTo_itemcreated_from_waiting_advices')
+        self.assertEquals(item.queryState(), 'itemcreated')
+
+        # from proposed
+        self.proposeItem(item)
+        self.changeUser('pmReviewer1')
+        self.do(item, 'wait_advices_from_proposed')
+        self.assertEquals(item.queryState(), 'proposed_waiting_advices')
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+        # 'pmCreator1' may view, not edit
+        self.changeUser('pmCreator1')
+        self.assertTrue(self.hasPermission(View, item))
+        self.assertFalse(self.hasPermission(ModifyPortalContent, item))
+        self.assertFalse(self.transitions(item))
+        self.changeUser('pmReviewer1')
+        self.do(item, 'backTo_proposed_from_waiting_advices')
+        self.assertEquals(item.queryState(), 'proposed')
+
+        # back to original configuration
+        adaptations.WAITING_ADVICES_FROM_STATES = original_WAITING_ADVICES_FROM_STATES
+
+    def test_pm_WFA_waiting_advices_may_edit(self):
+        '''Test the workflowAdaptation 'waiting_advices'.
+           This time we set 'remove_modify_access' to False so Modify access
+           is kept on the item set to 'waiting_advices'.'''
+        cfg = self.meetingConfig
+        # ease override by subproducts
+        if not 'waiting_advices' in cfg.listWorkflowAdaptations():
+            return
+
+        # activate the wfAdaptation and check
+        cfg.setWorkflowAdaptations('waiting_advices')
+        performWorkflowAdaptations(cfg, logger=pm_logger)
+
+        from Products.PloneMeeting.model import adaptations
+        original_WAITING_ADVICES_FROM_STATES = adaptations.WAITING_ADVICES_FROM_STATES
+        adaptations.WAITING_ADVICES_FROM_STATES = (
+            {'from_states': ('itemcreated', ),
+             'back_states': ('itemcreated', ),
+             'perm_cloned_states': ('itemcreated', ),
+             'remove_modify_access': False},)
+        cfg.setWorkflowAdaptations('waiting_advices')
+        performWorkflowAdaptations(cfg, logger=pm_logger)
+
+        self.changeUser('pmCreator1')
+        item = self.create('MeetingItem')
+        # from 'itemcreated'
+        self.do(item, 'wait_advices_from_itemcreated')
+        self.assertEquals(item.queryState(), 'itemcreated_waiting_advices')
+        self.assertTrue(self.hasPermission(ModifyPortalContent, item))
+        self.do(item, 'backTo_itemcreated_from_waiting_advices')
+        self.assertEquals(item.queryState(), 'itemcreated')
+
+        # back to original configuration
+        adaptations.WAITING_ADVICES_FROM_STATES = original_WAITING_ADVICES_FROM_STATES
 
 
 def test_suite():
